--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,30 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+@font-face {
+  font-family: 'Lalezar';
+  src: url("./assets/font/Lalezar.otf");
+}
+@font-face {
+  font-family: 'Elham';
+  src: url("./assets/font/Elham.ttf");
+}
+@font-face {
+  font-family: 'Far_box_negative';
+  src: url("./assets/font/Far_Box_Negative.ttf");
+}
+@font-face {
+  font-family: 'Far_box';
+  src: url("./assets/font/Far_Box.ttf");
+}
+@font-face {
+  font-family: 'Far_box_outline';
+  src: url("./assets/font/Far_Box_Outline.ttf");
+}
+@font-face {
+  font-family: 'Far_box_shade';
+  src: url("./assets/font/Far_Box_Shade.ttf");
+}
+
