--- a/src/app/login/login/login.page.html
+++ b/src/app/login/login/login.page.html
@@ -1,21 +1,22 @@
 <ion-content class="background">
-  <ion-card >
-    <ion-card-header>
-      <ion-card-title>Login</ion-card-title>
+  <ion-card class="card">
+    <ion-card-header >
+      <ion-card-title class="title text-style" > احراز هویت</ion-card-title>
     </ion-card-header>
-
+  `
     <ion-card-content>
+
       <form>
         <ion-item>
-          <ion-label position="floating">Floating Label</ion-label>
+          <ion-label position="floating" class="text-style"  >نام کاربری</ion-label>
           <ion-input></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Floating Label</ion-label>
-          <ion-input></ion-input>
+          <ion-label position="floating"  class="text-style">رمز ورود</ion-label>
+          <ion-input type="password"></ion-input>
         </ion-item>
-        <ion-button fill="outline" expand="block" color="danger">
-          Left Icon
+        <ion-button class="button" fill="outline" expand="block" color="danger">
+          ورود
         </ion-button>
       </form>
     </ion-card-content>
