--- a/src/app/login/get-ip/get-ip.page.html
+++ b/src/app/login/get-ip/get-ip.page.html
@@ -1,13 +1,13 @@
 <ion-content class="background">
   <ion-card >
     <ion-card-header>
-      <ion-card-title  class="title">انتخاب مجموعه</ion-card-title>
+      <ion-card-title  class="title text-style">انتخاب مجموعه</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
       <form>
         <ion-item>
-          <ion-label position="floating">مثال 4378</ion-label>
+          <ion-label position="floating" class="text-style">مثال 4378</ion-label>
           <ion-input></ion-input>
         </ion-item>
         <ion-button class="button" fill="outline" expand="block" color="danger">
