--- a/src/app/login/login/login.page.scss
+++ b/src/app/login/login/login.page.scss
@@ -1,8 +1,10 @@
 .button{
   font-family: Elham;
+  color: #2fdf75;
 }
 .title{
   font-family: Lalezar;
+  --ion-text-color: #2fdf75;
 }
 .text-style{
   text-align: center;
