--- a/src/app/login/get-ip/get-ip.page.html
+++ b/src/app/login/get-ip/get-ip.page.html
@@ -5,12 +5,12 @@
     </ion-card-header>
 
     <ion-card-content>
-      <form>
+      <form [formGroup]="getFormIP" (ngSubmit)="checkIp()">
         <ion-item>
           <ion-label position="floating" class="text-style">مثال 4378</ion-label>
-          <ion-input></ion-input>
+          <ion-input formControlName="codeIp" type="number"></ion-input>
         </ion-item>
-        <ion-button class="button" fill="outline" expand="block" color="danger">
+        <ion-button type="submit" class="button" fill="outline" expand="block" color="danger">
           ارسال کد مجموعه
         </ion-button>
       </form>
