--- a/src/app/login/get-ip/get-ip.page.html
+++ b/src/app/login/get-ip/get-ip.page.html
@@ -10,6 +10,17 @@
           <ion-label position="floating" class="text-style">مثال 4378</ion-label>
           <ion-input formControlName="codeIp" type="number"></ion-input>
         </ion-item>
+        <div class="validation-box">
+          <div *ngIf="getFormIP.invalid">&nbsp;</div>
+          <div *ngIf="getFormIP.invalid && isSubmit">
+            <ion-icon name="information-circle" size="small"></ion-icon>
+            <span>شماره کد خود را بدرستی وارد کنید.</span>
+          </div>
+          <div *ngIf="err && getFormIP.valid ">
+            <ion-icon name="information-circle" size="small"></ion-icon>
+            <span>شماره کد وجود ندارد</span>
+          </div>
+        </div>
         <ion-button  [disabled]="loading" type="submit" type="submit" class="button" fill="outline" expand="block" color="danger">
           <ion-spinner *ngIf="loading" ></ion-spinner>
           <span *ngIf="!loading">ارسال کد</span>
