--- a/src/app/login/login/login.page.html
+++ b/src/app/login/login/login.page.html
@@ -15,7 +15,7 @@
           <ion-label position="floating"  class="text-style button">رمز ورود</ion-label>
           <ion-input  formControlName="password" type="password"></ion-input>
         </ion-item>
-        <ion-button (click)="getIp()"  class="button" fill="outline" expand="block" color="danger">
+        <ion-button  type="submit" class="button" fill="outline" expand="block" color="danger">
           ورود
         </ion-button>
       </form>
