--- a/src/app/login/login/login.page.html
+++ b/src/app/login/login/login.page.html
@@ -9,7 +9,7 @@
       <form [formGroup]="form" (ngSubmit)="login()">
         <ion-item>
           <ion-label position="floating" class="text-style button"  >نام کاربری</ion-label>
-          <ion-input  formControlName="username" type="text"></ion-input>
+          <ion-input  formControlName="user_name" type="text"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating"  class="text-style button">رمز ورود</ion-label>
