--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -35,3 +35,13 @@ ion-content{
 h3{
   font-family: Elham;
 }
+
+.name-box{
+  display:flex ;
+  height: 2em;
+  width: 100%;
+  background-color: white;
+  justify-content: center;
+  font-size: x-large;
+  font-family: Lalezar;
+}
