--- a/src/app/login/get-ip/get-ip.page.scss
+++ b/src/app/login/get-ip/get-ip.page.scss
@@ -10,3 +10,16 @@
 ion-input{
   text-align: center;
 }
+.background{
+
+  --background: repeating-linear-gradient(
+                  -45deg,
+                  hsl(215,30%,60%) 0%,  /* blau */
+                  hsl(120,30%,90%) 15%, /* grün */
+                  hsl(30,50%,90%) 30%,  /* rosa */
+                  hsl(215,30%,60%) 45%  /* blau */
+  );
+}
+ion-card{
+  margin-top: 5em;
+}
