--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,7 +16,7 @@
     </div>
 
 
-    <ion-card>
+    <ion-card (click)="reciptionSituation()">
         <ion-card-header>
             <ion-card-title>
 
