--- a/src/app/pages/functionality/functionality.page.html
+++ b/src/app/pages/functionality/functionality.page.html
@@ -14,4 +14,75 @@
 
 <ion-content>
 
+  <ion-card *ngFor="let model of dataFromModel">
+    <ion-card-title style="display: flex" class="ion-justify-content-center">
+      {{model.OperationTitle}}
+    </ion-card-title>
+    <ion-card-content>
+      <ion-grid>
+
+
+
+        <ion-row>
+          <ion-col dir="rtl">
+             تعداد : {{model.OperationCount}}  نفر
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col dir="rtl">
+            {{model.TotalAmount | currency}} ریال
+          </ion-col>
+        </ion-row>
+
+
+
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+<ion-footer>
+  <ion-toolbar class="no-bg">
+    <ion-button *ngIf="data.organization_unit" (click)="filterAction()" fill="outline" expand="block">
+      اعمال فیلتر
+    </ion-button>
+    <ion-grid *ngIf="filterActive">
+      <ion-row>
+        <ion-col>
+          <div>
+            <ion-item dir="rtl">
+              <ion-label>تا تاریخ</ion-label>
+              <ion-datetime [value]="m" displayFormat="YYYY/MM/DD" pickerFormat="DDD MM YYYY" [pickerOptions]="untilPickerOptions" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
+            </ion-item>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div>
+            <ion-item dir="rtl">
+              <ion-label>از تاریخ</ion-label>
+              <ion-datetime value="1397-12-15T13:47:20.789" displayFormat="YYYY/MM/DD"  [pickerOptions]="fromPickerOptions" pickerFormat="DDD MM YYYY" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
+            </ion-item>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item dir="rtl" (click)="selectPackage()">
+            <ion-label >
+              انتخاب مجموعه
+            </ion-label>
+            <ion-text >
+              {{unitName}}
+            </ion-text>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-button (click)="filter()" expand="block">
+      فیلتر
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
