--- a/src/app/pages/recive-report/recive-report.page.html
+++ b/src/app/pages/recive-report/recive-report.page.html
@@ -14,15 +14,35 @@
 
 <ion-content>
 
-  <ion-content class="main">
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title (click)="filter()" style="display: flex" class="ion-justify-content-center">
-         فیلتر
-        </ion-card-title>
-      </ion-card-header>
-      <ion-card-content style="display: block" class="ion-justify-content-between" *ngIf="filterAll">
-        <div>
+</ion-content>
+<ion-footer>
+  <ion-toolbar >
+    <ion-button *ngIf="data.organization_unit" (click)="filterAction()" fill="outline" expand="block">
+      اعمال فیلتر
+    </ion-button>
+    <ion-grid *ngIf="filterActive">
+      <ion-row>
+        <ion-col>
+          <div>
+            <ion-item dir="rtl">
+              <ion-label>تا تاریخ</ion-label>
+              <ion-datetime [value]="m" displayFormat="YYYY/MM/DD" pickerFormat="DDD MM YYYY" [pickerOptions]="untilPickerOptions" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
+            </ion-item>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div>
+            <ion-item dir="rtl">
+              <ion-label>از تاریخ</ion-label>
+              <ion-datetime value="1397-12-15T13:47:20.789" displayFormat="YYYY/MM/DD"  [pickerOptions]="fromPickerOptions" pickerFormat="DDD MM YYYY" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
+            </ion-item>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
           <ion-item dir="rtl" (click)="selectPackage()">
             <ion-label >
               انتخاب مجموعه
@@ -31,28 +51,11 @@
               {{unitName}}
             </ion-text>
           </ion-item>
-        </div>
-        <div>
-          <ion-item dir="rtl">
-            <ion-label>از تاریخ</ion-label>
-            <ion-datetime value="1397-12-15T13:47:20.789" displayFormat="YYYY/MM/DD"  [pickerOptions]="fromPickerOptions" pickerFormat="DDD MM YYYY" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
-          </ion-item>
-          <ion-item dir="rtl">
-            <ion-label>تا تاریخ</ion-label>
-            <ion-datetime [value]="m" displayFormat="YYYY/MM/DD" pickerFormat="DDD MM YYYY" [pickerOptions]="untilPickerOptions" monthValues="1,2,3,4,5,6,7,8,9,10,11,12" [yearValues]="customYearValues"></ion-datetime>
-          </ion-item>
-        </div>
-        <div>
-          <ion-button color="danger" fill="outline" expand="full" (click)="filterAction()" *ngIf="data.organization_unit">اعمال فیلتر</ion-button>
-        </div>
-      </ion-card-content>
-    </ion-card>
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>
-      <h1 style="display: flex" class="ion-justify-content-center">{{allReceive | number}}</h1>
-    </ion-card-title>
-  </ion-card-header>
-</ion-card>
-
-</ion-content>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-button (click)="filter()" expand="block">
+      فیلتر
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
