--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -89,7 +89,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card>
+    <ion-card (click)="functionalitiReport()">
         <ion-card-header>
             <ion-card-title>
 
