--- a/src/app/login/get-ip/get-ip.page.html
+++ b/src/app/login/get-ip/get-ip.page.html
@@ -1,14 +1,18 @@
-<ion-content class="background">
-  <ion-card >
-    <ion-card-header>
-      <ion-card-title  class="title text-style">انتخاب مجموعه</ion-card-title>
-    </ion-card-header>
+<ion-content class="background" >
 
+
+<div class="container">
+  <ion-card>
+    <ion-card-header dir="auto">
+      <div style="display: flex" class="ion-justify-content-center">
+        <img height="100px" src="assets/logo.png">
+      </div>
+    </ion-card-header>
     <ion-card-content>
       <form [formGroup]="getFormIP" (ngSubmit)="checkIp()">
-        <ion-item>
-          <ion-label position="floating" class="text-style">مثال 4378</ion-label>
-          <ion-input formControlName="codeIp" type="number"></ion-input>
+        <ion-item class="item-input" >
+          <ion-label  position="floating" class="text-style button">کد مجموعه</ion-label>
+          <ion-input  formControlName="codeIp" class="item-form ion-text-center ltr" type="number"></ion-input>
         </ion-item>
         <div class="validation-box">
           <div *ngIf="getFormIP.invalid">&nbsp;</div>
@@ -17,12 +21,17 @@
             <span>شماره کد خود را بدرستی وارد کنید.</span>
           </div>
         </div>
-        <ion-button  [disabled]="loading" type="submit" type="submit" class="button" fill="outline" expand="block" color="danger">
+        <ion-button   [disabled]="loading" type="submit"  class="button item-input"  expand="block" color="danger">
           <ion-spinner *ngIf="loading" ></ion-spinner>
-          <span *ngIf="!loading">ارسال کد</span>
+          <span *ngIf="!loading"><fa-icon style="margin: 5px" [icon]="faCoffee"></fa-icon>ارسال کد مجموعه</span>
         </ion-button>
       </form>
     </ion-card-content>
   </ion-card>
+</div>
+
+
+
+
 
 </ion-content>
