--- a/src/app/login/login/login.page.scss
+++ b/src/app/login/login/login.page.scss
@@ -25,3 +25,19 @@ ion-input{
 card{
   margin-top: 5em;
 }
+form{
+  width: 100%;
+}
+.item-input{
+  background-color: #0d0d0d;
+  opacity: 0.9;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100% ;
+}
