--- a/src/global.scss
+++ b/src/global.scss
@@ -66,4 +66,15 @@
 
 .secondary{
   text-align: center;
+  --background: red;
+}
+.background{
+
+  --background: repeating-linear-gradient(
+                  -45deg,
+                  hsl(215,30%,60%) 0%,  /* blau */
+                  hsl(120,30%,90%) 15%, /* grün */
+                  hsl(30,50%,90%) 30%,  /* rosa */
+                  hsl(215,30%,60%) 45%  /* blau */
+  );
 }
